2008-07-21  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]: 
	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-processor.c: Completely rework the crawler,
	so we have ONE per module. It also now will crawl non-recursive
	directories set in the .module files. All non-recursive
	directories are crawled first. This also moves the "sending" of
	items to the indexer into the processor module so it is in ONE
	place not TWO.

2008-07-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reverted TrackerField instances as hash keys patch

2008-07-21  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-monitor.[ch]: 
	* src/trackerd/tracker-processor.c: Make tracker-monitor a GObject
	with signalling when there are items created/updated/deleted and
	move all the code which sends file notifications to the indexer
	into the processor.

2008-07-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Functions for attached
	connections

2008-07-18  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.[ch]:
	* src/libtracker-common/tracker-module-config.c: Added functions
	to remove duplicates or hierarchical conflicts between monitor
	directories and monitor recurse directories. 
	
	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-crawler.c: Emit a signal for each directory
	we process so the processor can add monitors. The bug where we
	don't monitor or crawl the toplevel directory/files for each
	module is fixed now. We now only send files to the indexer AFTER
	we have crawled the file system. This time is insignificant, for
	100k files it takes ~10 seconds.

	Emitting a signal for each directory is not really the best way
	forward here, since the directories we crawl are the directories
	which are "recursive monitor directories". What we should do is