@@ -19,7 +19,9 @@
 
 #include <stdlib.h>
 #include <glib.h>
+#include <glib-object.h>
 #include <tracker-indexer/tracker-module.h>
+#include <libtracker-common/tracker-ontology.h>
 
 #define GROUP_DESKTOP_ENTRY "Desktop Entry"
 #define KEY_TYPE            "Type"
@@ -50,13 +52,16 @@ tracker_module_get_name (void)
 }
 
 static void
-insert_data_from_desktop_file (GHashTable  *metadata,
-			       const gchar *metadata_key,
-			       GKeyFile    *desktop_file,
-			       const gchar *key,
-			       gboolean     use_locale)
+insert_data_from_desktop_file (GHashTable   *metadata,
+			       TrackerField *metadata_key,
+			       GKeyFile     *desktop_file,
+			       const gchar  *key,
+			       gboolean      use_locale)
 {
 	gchar *str;
+
+	if (!metadata_key)
+		return;
 
 	if (use_locale) {
 		str = g_key_file_get_locale_string (desktop_file, GROUP_DESKTOP_ENTRY, key, NULL, NULL);
@@ -65,7 +70,7 @@ insert_data_from_desktop_file (GHashTable  *metadata,
 	}
 
 	if (str) {
-		g_hash_table_insert (metadata, (gpointer) metadata_key, str);
+		g_hash_table_insert (metadata, g_object_ref (metadata_key), str);
 	}
 }
 
@@ -75,6 +80,7 @@ tracker_module_file_get_metadata (TrackerFile *file)
 	GHashTable *metadata;
 	GKeyFile *key_file;
 	gchar *type, *filename;
+	TrackerField *field;
 
 	/* Check we're dealing with a desktop file */
 	if (!g_str_has_suffix (file->path, ".desktop")) {
@@ -102,21 +108,57 @@ tracker_module_file_get_metadata (TrackerFile *file)
 	}
 
 	/* Begin collecting data */
-	metadata = g_hash_table_new_full (g_str_hash, g_str_equal,
-					  NULL,
+	metadata = g_hash_table_new_full (g_direct_hash, g_direct_equal,
+					  (GDestroyNotify) g_object_unref,
 					  (GDestroyNotify) g_free);
 
-	insert_data_from_desktop_file (metadata, METADATA_APP_NAME, key_file, KEY_NAME, FALSE);
-	insert_data_from_desktop_file (metadata, METADATA_APP_DISPLAY_NAME, key_file, KEY_NAME, TRUE);
-	insert_data_from_desktop_file (metadata, METADATA_APP_GENERIC_NAME, key_file, KEY_GENERIC_NAME, TRUE);
-	insert_data_from_desktop_file (metadata, METADATA_APP_COMMENT, key_file, KEY_COMMENT, TRUE);
-	insert_data_from_desktop_file (metadata, METADATA_APP_EXECUTABLE, key_file, KEY_EXECUTABLE, FALSE);
-	insert_data_from_desktop_file (metadata, METADATA_APP_ICON, key_file, KEY_ICON, FALSE);
+	insert_data_from_desktop_file (metadata, 
+				       tracker_ontology_get_field_def (METADATA_APP_NAME), 
+				       key_file, 
+				       KEY_NAME, 
+				       FALSE);
+
+	insert_data_from_desktop_file (metadata, 
+				       tracker_ontology_get_field_def (METADATA_APP_DISPLAY_NAME),
+				       key_file,
+				       KEY_NAME,
+				       TRUE);
+
+	insert_data_from_desktop_file (metadata, 
+				       tracker_ontology_get_field_def (METADATA_APP_GENERIC_NAME),
+				       key_file,
+				       KEY_GENERIC_NAME,
+				       TRUE);
+
+	insert_data_from_desktop_file (metadata, 
+				       tracker_ontology_get_field_def (METADATA_APP_COMMENT),
+				       key_file,
+				       KEY_COMMENT,
+				       TRUE);
+
+	insert_data_from_desktop_file (metadata, 
+				       tracker_ontology_get_field_def (METADATA_APP_EXECUTABLE),
+				       key_file,
+				       KEY_EXECUTABLE,
+				       FALSE);
+
+	insert_data_from_desktop_file (metadata, 
+				       tracker_ontology_get_field_def (METADATA_APP_ICON),
+				       key_file,
+				       KEY_ICON,
+				       FALSE);
 
 	/* FIXME: mimetypes list and categories? */
 
 	filename = g_filename_display_basename (file->path);
-	g_hash_table_insert (metadata, METADATA_FILE_NAME, filename);
+
+	field = tracker_ontology_get_field_def (METADATA_FILE_NAME);
+
+	if (field) {
+		g_hash_table_insert (metadata, 
+				     g_object_ref (field),
+				     filename);
+	}
 
 	g_key_file_free (key_file);
 	g_free (type);
