@@ -1,3 +1,15 @@
+2008-07-21  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* src/tracker-indexer/modules/files.c:
+	* src/tracker-indexer/modules/evolution.c:
+	* src/tracker-indexer/modules/applications.c:
+	* src/tracker-indexer/tracker-indexer.c:
+
+	tracker-indexer modules returned a GHashTable with field name/value
+	pairs, we now use TrackerField pointers for the hashtable keys, so we
+	could deal with values in their native format (instead of having to
+	convert everything to strings)
+
 2008-07-21  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/tracker-crawler.[ch]: 
